--- a/realtimeadapter/src/main/res/values/strings.xml
+++ b/realtimeadapter/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Chat SDK Realtime Adapter</string>
+    <string name="chatsdk_notification_channel_name">Chat</string>
+    <string name="chatsdk_notification_channel_description">Chat notifications</string>
 </resources>
